container overflow fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,9 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box; 
+  overflow: hidden;
+}
 
 
 
